# tender-service

./: .env  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
src/: dependencies.py  exceptions.py  main.py  models.py
src/db/: alembic.ini  crud.py  database.py  models.py  schemas.py
src/db/migration/: env.py
src/db/migration/versions/: 18a0130a1676_initial_migration.py  ac9f657a0b1e_initial_migration.py
src/routes/: bids.py  tenders.py
